--- a/.github/workflows/ci-cd-script.yml
+++ b/.github/workflows/ci-cd-script.yml
@@ -24,5 +24,6 @@ jobs:
 
     - name: Run Ansible Script
       run: | 
+         sudo apt update
          sudo apt install ansible -y
-         ansible-playbook -i localhost, -c local ./Ansible-Learn/install_nginx.yml
+         ansible-playbook -i localhost, -c local Ansible-Learn/install_nginx.yml
